# modernist-python

./: .gitignore  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml
libs/: __init__.py  pyproject.toml  say_hello.py
libs/bovine_greeting/: __init__.py  say_hello.py
libs/core/: pyproject.toml
libs/core/src/core/: __init__.py  logger.py
libs/core/test_core/: test_logger.py
libs/orm/: pyproject.toml
libs/orm/src/orm/: engine.py
libs/orm/src/orm/models/: __init__.py  base.py  example.py
libs/orm/test_orm/: __init__.py
migrations/: Dockerfile  env.py  pyproject.toml
migrations/versions/: 6acd45c9ec72_init.py  f324b1b491f9_init.py
scripts/: ascii_art.py
services/backend/: Dockerfile  pyproject.toml
tests/: test_bovine_greeting.py
