[project]
name = "modernist-python"
version = "0.1.0"
description = "A template for modern Python projects."
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["cowsay>=6.1", "pydantic>=2.11.9"]

[dependency-groups]
dev = ["mypy>=1.18.2"]


[tool.mypy]
strict = true
follow_imports = "normal"
ignore_missing_imports = true
