[project]
name = "modernist-python"
version = "0.1.0"
description = "A template for modern Python projects."
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["libs"]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.13.2",
]


[tool.uv.workspace]
members = ["libs"]

[tool.uv.sources]
libs = { workspace = true }


[tool.mypy]
strict = true
follow_untyped_imports = true
